--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "user/civil-registry",
+    "description": "",
     "authors": [
         {
             "name": "P-Sintija",
@@ -9,7 +10,8 @@
     "require": {
         "phpunit/phpunit": "^9.5",
         "catfan/medoo": "^1.7",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "league/container": "^3.3"
     },
     "autoload": {
         "psr-4": {
@@ -17,4 +19,5 @@
             "Test\\": "tests/"
         }
     }
+
 }
