--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "phpunit/phpunit": "^9.5",
         "catfan/medoo": "^1.7",
         "nikic/fast-route": "^1.3",
-        "league/container": "^3.3"
+        "league/container": "^3.3",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
